--- a/centros.html
+++ b/centros.html
@@ -32,6 +32,9 @@
       background:#d60000;color:#fff;font-size:.9rem;font-weight:800;text-decoration:none
     }
 
+    h1{margin:0 0 6px;font-size:1.6rem}
+    .subtitle{margin:0 0 14px;color:#444;font-size:.95rem;line-height:1.25rem}
+
     .layout{
       display:grid;
       grid-template-columns: 380px 1fr;
@@ -48,14 +51,12 @@
       padding:14px 16px 16px;margin-bottom:14px
     }
 
-    h1{margin:0 0 6px;font-size:1.6rem}
-    .subtitle{margin:0 0 14px;color:#444;font-size:.95rem;line-height:1.25rem}
-
     /* Filtros: cada uno en su línea */
     .filter-row{margin-top:10px}
     .filter-row label{display:block;font-size:.82rem;font-weight:900;color:#555;margin-bottom:4px}
     .filter-row select, .filter-row input{
-      width:100%;padding:9px 10px;border-radius:10px;border:1px solid #cbd5e1;font-size:.95rem;background:#fff
+      width:100%;padding:9px 10px;border-radius:10px;border:1px solid #cbd5e1;
+      font-size:.95rem;background:#fff
     }
 
     .btn{
@@ -77,7 +78,7 @@
     .item .small{font-size:.84rem;color:#555;line-height:1.2rem}
     .tagline{margin-top:4px;font-size:.82rem;color:#666}
 
-    /* FOOTER institucional (mismo que Consultas) */
+    /* FOOTER institucional */
     footer{
       background:#222;color:#f2f2f2;padding:18px 20px 10px;border-top:3px solid #d60000;
       font-size:.85rem;margin-top:10px
@@ -119,14 +120,14 @@
 
   <h1>Centros de trabajo</h1>
   <p class="subtitle">
-    Filtra por municipio, zona, tipo de centro, titularidad y horario. Los resultados se reflejan en el mapa y en el listado.
+    Filtra por municipio, zona, tipo de centro, titularidad, horario y jornada partida. Los resultados se reflejan en el mapa y el listado.
   </p>
 
   <div class="layout">
     <!-- PANEL IZQUIERDO -->
     <section class="card">
       <h2 style="margin:0 0 6px;">Filtros</h2>
-      <div style="font-size:.9rem;color:#555;">Cada filtro aparece en su propia línea para facilitar la lectura.</div>
+      <div style="font-size:.9rem;color:#555;">Cada filtro aparece en su propia línea.</div>
 
       <div class="filter-row">
         <label for="f_busqueda">Búsqueda por nombre / código / dirección</label>
@@ -135,37 +136,32 @@
 
       <div class="filter-row">
         <label for="f_municipio">Municipio</label>
-        <select id="f_municipio">
-          <option value="">(Todos)</option>
-        </select>
+        <select id="f_municipio"><option value="">(Todos)</option></select>
       </div>
 
       <div class="filter-row">
         <label for="f_zona">Zona (1–8)</label>
-        <select id="f_zona">
-          <option value="">(Todas)</option>
-        </select>
+        <select id="f_zona"><option value="">(Todas)</option></select>
       </div>
 
       <div class="filter-row">
         <label for="f_tipo">Tipo de centro</label>
-        <select id="f_tipo">
-          <option value="">(Todos)</option>
-        </select>
+        <select id="f_tipo"><option value="">(Todos)</option></select>
       </div>
 
       <div class="filter-row">
         <label for="f_titularidad">Titularidad</label>
-        <select id="f_titularidad">
-          <option value="">(Todas)</option>
-        </select>
+        <select id="f_titularidad"><option value="">(Todas)</option></select>
       </div>
 
       <div class="filter-row">
         <label for="f_horario">Horario</label>
-        <select id="f_horario">
-          <option value="">(Todos)</option>
-        </select>
+        <select id="f_horario"><option value="">(Todos)</option></select>
+      </div>
+
+      <div class="filter-row">
+        <label for="f_jornada">Jornada partida</label>
+        <select id="f_jornada"><option value="">(Todas)</option></select>
       </div>
 
       <div class="btnrow">
@@ -234,17 +230,16 @@
 <script>
   document.getElementById("anio-footer").textContent = new Date().getFullYear();
 
-  // Helpers
-  const norm = (v) => (v ?? "").toString().trim();
-  const normKey = (v) => norm(v).toLowerCase();
+  // Encabezados EXACTOS en tu CSV:
+  // id, nombre, codigo_centro, titularidad, tipo_centro, etapas, lat, lng, zona,
+  // direccion, cp, municipio, provincia, telefono, fax, email, web, horario, jornada_partida
 
-  // CSV columns we expect (by NAME, order irrelevant)
   const COL = {
     id: "id",
     nombre: "nombre",
-    codigo: "codigo_centro",
+    codigo_centro: "codigo_centro",
     titularidad: "titularidad",
-    tipo: "tipo_centro",
+    tipo_centro: "tipo_centro",
     etapas: "etapas",
     lat: "lat",
     lng: "lng",
@@ -258,50 +253,17 @@
     email: "email",
     web: "web",
     horario: "horario",
-    jornada: "jornada_partida",
-    notas: "notas"
+    jornada_partida: "jornada_partida"
   };
 
-  // State
-  let raw = [];
-  let filtered = [];
-  let markersLayer;
+  const norm = (v) => (v ?? "").toString().trim();
+  const normKey = (v) => norm(v).toLowerCase();
 
-  // Map
-  const map = L.map("map").setView([39.2, -6.3], 8);
-  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
-    maxZoom: 19,
-    attribution: "&copy; OpenStreetMap"
-  }).addTo(map);
-
-  markersLayer = L.layerGroup().addTo(map);
-
-  // Elements
-  const elBus = document.getElementById("f_busqueda");
-  const elMun = document.getElementById("f_municipio");
-  const elZona = document.getElementById("f_zona");
-  const elTipo = document.getElementById("f_tipo");
-  const elTit = document.getElementById("f_titularidad");
-  const elHor = document.getElementById("f_horario");
-  const elMeta = document.getElementById("meta");
-  const elList = document.getElementById("list");
-
-  document.getElementById("btn_reset").addEventListener("click", () => {
-    elBus.value = "";
-    elMun.value = "";
-    elZona.value = "";
-    elTipo.value = "";
-    elTit.value = "";
-    elHor.value = "";
-    applyFilters();
-  });
-
-  document.getElementById("btn_reload").addEventListener("click", () => loadCSV(true));
-
-  [elBus, elMun, elZona, elTipo, elTit, elHor].forEach(el => {
-    el.addEventListener("input", applyFilters);
-    el.addEventListener("change", applyFilters);
-  });
+  function parseFloatOrNull(v){
+    const t = norm(v).replace(",", ".");
+    const x = Number.parseFloat(t);
+    return Number.isFinite(x) ? x : null;
+  }
 
   function uniqueSorted(values) {
     const set = new Set(values.map(norm).filter(Boolean));
@@ -321,14 +283,56 @@
       o.textContent = v;
       selectEl.appendChild(o);
     });
-    // restore if possible
     if ([...selectEl.options].some(o => o.value === current)) selectEl.value = current;
   }
 
-  function parseFloatOrNull(v){
-    const t = norm(v).replace(",", ".");
-    const x = Number.parseFloat(t);
-    return Number.isFinite(x) ? x : null;
+  // Map
+  const map = L.map("map").setView([39.2, -6.3], 8);
+  L.tileLayer("https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png", {
+    maxZoom: 19, attribution: "&copy; OpenStreetMap"
+  }).addTo(map);
+  const markersLayer = L.layerGroup().addTo(map);
+
+  // Elements
+  const elBus = document.getElementById("f_busqueda");
+  const elMun = document.getElementById("f_municipio");
+  const elZona = document.getElementById("f_zona");
+  const elTipo = document.getElementById("f_tipo");
+  const elTit = document.getElementById("f_titularidad");
+  const elHor = document.getElementById("f_horario");
+  const elJor = document.getElementById("f_jornada");
+  const elMeta = document.getElementById("meta");
+  const elList = document.getElementById("list");
+
+  // State
+  let raw = [];
+  let filtered = [];
+
+  document.getElementById("btn_reset").addEventListener("click", () => {
+    elBus.value = "";
+    elMun.value = "";
+    elZona.value = "";
+    elTipo.value = "";
+    elTit.value = "";
+    elHor.value = "";
+    elJor.value = "";
+    applyFilters();
+  });
+
+  document.getElementById("btn_reload").addEventListener("click", () => loadCSV(true));
+
+  [elBus, elMun, elZona, elTipo, elTit, elHor, elJor].forEach(el => {
+    el.addEventListener("input", applyFilters);
+    el.addEventListener("change", applyFilters);
+  });
+
+  function escapeHtml(s){
+    return (s ?? "").toString()
+      .replaceAll("&","&amp;")
+      .replaceAll("<","&lt;")
+      .replaceAll(">","&gt;")
+      .replaceAll('"',"&quot;")
+      .replaceAll("'","&#039;");
   }
 
   function loadCSV(bustCache=false){
@@ -340,41 +344,37 @@
       })
       .then(text => {
         const parsed = Papa.parse(text, { header:true, skipEmptyLines:true });
-        raw = (parsed.data || []).map(row => {
-          // Normalize expected keys even if CSV has extra spaces
-          const obj = {};
-          for (const k in row) obj[normKey(k)] = row[k];
+        const rows = parsed.data || [];
 
-          return {
-            id: norm(obj[COL.id]),
-            nombre: norm(obj[COL.nombre]),
-            codigo_centro: norm(obj[COL.codigo]),
-            titularidad: norm(obj[COL.titularidad]),
-            tipo_centro: norm(obj[COL.tipo]),
-            etapas: norm(obj[COL.etapas]),
-            lat: parseFloatOrNull(obj[COL.lat]),
-            lng: parseFloatOrNull(obj[COL.lng]),
-            zona: norm(obj[COL.zona]),
-            direccion: norm(obj[COL.direccion]),
-            cp: norm(obj[COL.cp]),
-            municipio: norm(obj[COL.municipio]),
-            provincia: norm(obj[COL.provincia]),
-            telefono: norm(obj[COL.telefono]),
-            fax: norm(obj[COL.fax]),
-            email: norm(obj[COL.email]),
-            web: norm(obj[COL.web]),
-            horario: norm(obj[COL.horario]),
-            jornada_partida: norm(obj[COL.jornada]),
-            notas: norm(obj[COL.notas])
-          };
-        });
+        raw = rows.map(row => ({
+          id: norm(row[COL.id]),
+          nombre: norm(row[COL.nombre]),
+          codigo_centro: norm(row[COL.codigo_centro]),
+          titularidad: norm(row[COL.titularidad]),
+          tipo_centro: norm(row[COL.tipo_centro]),
+          etapas: norm(row[COL.etapas]),
+          lat: parseFloatOrNull(row[COL.lat]),
+          lng: parseFloatOrNull(row[COL.lng]),
+          zona: norm(row[COL.zona]),
+          direccion: norm(row[COL.direccion]),
+          cp: norm(row[COL.cp]),
+          municipio: norm(row[COL.municipio]),
+          provincia: norm(row[COL.provincia]),
+          telefono: norm(row[COL.telefono]),
+          fax: norm(row[COL.fax]),
+          email: norm(row[COL.email]),
+          web: norm(row[COL.web]),
+          horario: norm(row[COL.horario]),
+          jornada_partida: norm(row[COL.jornada_partida])
+        }));
 
-        // Build filter options from CLEAN fields (no mezclar)
+        // Opciones de filtros (cada uno de SU campo)
         setOptions(elMun, uniqueSorted(raw.map(x => x.municipio)), "(Todos)");
         setOptions(elZona, uniqueSorted(raw.map(x => x.zona)), "(Todas)");
         setOptions(elTipo, uniqueSorted(raw.map(x => x.tipo_centro)), "(Todos)");
         setOptions(elTit, uniqueSorted(raw.map(x => x.titularidad)), "(Todas)");
         setOptions(elHor, uniqueSorted(raw.map(x => x.horario)), "(Todos)");
+        setOptions(elJor, uniqueSorted(raw.map(x => x.jornada_partida)), "(Todas)");
 
         applyFilters();
       })
@@ -392,9 +392,9 @@
     const tipo = normKey(elTipo.value);
     const titularidad = normKey(elTit.value);
     const horario = normKey(elHor.value);
+    const jornada = normKey(elJor.value);
 
     filtered = raw.filter(x => {
-      // texto libre: nombre/código/dirección/municipio
       if (q) {
         const hay = [
           x.nombre, x.codigo_centro, x.direccion, x.municipio, x.provincia
@@ -406,6 +406,7 @@
       if (tipo && normKey(x.tipo_centro) !== tipo) return false;
       if (titularidad && normKey(x.titularidad) !== titularidad) return false;
       if (horario && normKey(x.horario) !== horario) return false;
+      if (jornada && normKey(x.jornada_partida) !== jornada) return false;
 
       return true;
     });
@@ -414,12 +415,10 @@
   }
 
   function render(){
-    // Meta
     elMeta.textContent = `Resultados: ${filtered.length} de ${raw.length}`;
 
-    // List
     elList.innerHTML = "";
-    filtered.slice(0, 200).forEach(x => {
+    filtered.slice(0, 250).forEach(x => {
       const div = document.createElement("div");
       div.className = "item";
       div.innerHTML = `
@@ -430,17 +429,17 @@
           <strong>Zona:</strong> ${escapeHtml(x.zona || "-")}<br>
           <strong>Tipo:</strong> ${escapeHtml(x.tipo_centro || "-")} ·
           <strong>Titularidad:</strong> ${escapeHtml(x.titularidad || "-")}<br>
-          <strong>Horario:</strong> ${escapeHtml(x.horario || "-")}
+          <strong>Horario:</strong> ${escapeHtml(x.horario || "-")} ·
+          <strong>Jornada partida:</strong> ${escapeHtml(x.jornada_partida || "-")}
         </div>
         <div class="tagline">${escapeHtml(x.direccion || "")}</div>
       `;
       elList.appendChild(div);
     });
 
-    // Map
     markersLayer.clearLayers();
-
     const points = [];
+
     filtered.forEach(x => {
       if (x.lat == null || x.lng == null) return;
 
@@ -450,7 +449,9 @@
         <strong>Municipio:</strong> ${escapeHtml(x.municipio || "-")}<br>
         <strong>Zona:</strong> ${escapeHtml(x.zona || "-")}<br>
         <strong>Tipo:</strong> ${escapeHtml(x.tipo_centro || "-")}<br>
-        <strong>Horario:</strong> ${escapeHtml(x.horario || "-")}
+        <strong>Titularidad:</strong> ${escapeHtml(x.titularidad || "-")}<br>
+        <strong>Horario:</strong> ${escapeHtml(x.horario || "-")}<br>
+        <strong>Jornada partida:</strong> ${escapeHtml(x.jornada_partida || "-")}
       `);
 
       m.addTo(markersLayer);
@@ -458,21 +459,11 @@
     });
 
     if (points.length) {
-      const bounds = L.latLngBounds(points);
-      map.fitBounds(bounds.pad(0.15));
+      map.fitBounds(L.latLngBounds(points).pad(0.15));
     }
   }
 
-  function escapeHtml(s){
-    return (s ?? "").toString()
-      .replaceAll("&","&amp;")
-      .replaceAll("<","&lt;")
-      .replaceAll(">","&gt;")
-      .replaceAll('"',"&quot;")
-      .replaceAll("'","&#039;");
-  }
-
-  // Load on start (cache-bust to avoid stale CSV)
+  // Cargar al inicio (evita CSV en caché)
   loadCSV(true);
 </script>
 </body>
